增加应征和活动数量接口
